<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:background="@color/white_color">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv1t"
                style="@style/OrderItemTextStyle"
                android:text="@string/data1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv2t"
                style="@style/OrderItemTextStyle"
                android:text="@string/data2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv3t"
                style="@style/OrderItemTextStyle"
                android:text="@string/data3" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv4t"
                style="@style/OrderItemTextStyle"
                android:text="@string/data4" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl5t"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv5t"
                style="@style/OrderItemTextStyle"
                android:text="@string/data5" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ll"
        android:background="@color/line_color"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_post"
        android:layout_width="74.4dp"
        android:layout_height="27.8dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ll"
        android:layout_marginBottom="10.4dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/button_bg_5_rob"
        android:gravity="center"
        android:text=""
        android:textColor="@color/theme_color"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_repair"
        android:layout_width="74.4dp"
        android:layout_height="27.8dp"
        android:layout_below="@+id/ll"
        android:layout_marginBottom="10.4dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/button_bg_5_rob"
        android:gravity="center"
        android:text="补货"
        android:textColor="@color/theme_color"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_fast"
        android:layout_width="10.7dp"
        android:layout_height="15.6dp"
        android:layout_below="@+id/ll"
        android:layout_marginBottom="16.8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16.8dp"
        android:gravity="center"
        android:src="@drawable/icon_fast"
        android:text="补货"
        android:textColor="@color/theme_color"
        android:visibility="gone" />
</RelativeLayout>