<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="14.4dp"
    android:layout_marginRight="14.4dp"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ly_camera"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/white_color"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@drawable/color_black_to_gray"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:id="@+id/ly_picture"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/white_color"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@drawable/color_black_to_gray"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:id="@+id/ly_cancel"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/white_color"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_text"
            android:textColor="@drawable/color_red_to_gray"
            android:textSize="13sp" />
    </LinearLayout>


</LinearLayout>
