<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_white_dialog"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/tips"
            android:textColor="@color/black_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_login_tips"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/forced_login_out_tips"
                android:textColor="@color/black_color"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/close_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/know_text"
                android:textAllCaps="false"
                android:textColor="@drawable/color_black_to_gray"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
