<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">


    <RelativeLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/theme_color">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="10dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="-4dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_back"
            android:padding="10dp"
            android:text="@string/back"
            android:textColor="@color/white_color"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/theme_color"
            android:gravity="center"
            android:text="@string/find_password"
            android:textColor="@color/white_color"
            android:textSize="17sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="11.9dp"
        android:layout_marginRight="11.9dp"
        android:layout_marginTop="11.9dp"
        android:background="@color/white_color"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="14.9dp"
                android:layout_height="21.4dp"
                android:layout_gravity="center"
                android:src="@drawable/iphon_icon" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="11.5dp"
                android:layout_marginRight="11.5dp"
                android:background="@null"
                android:hint="请输入手机号"
                android:textColorHint="@color/text_gray"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/phone_clear"
            android:layout_width="30.4dp"
            android:layout_height="30.4dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:padding="5dp"
            android:src="@drawable/yijianshanchu"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="11.9dp"
        android:layout_marginRight="11.9dp"
        android:layout_marginTop="1dp"
        android:background="@color/white_color"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="15dp"
            android:layout_height="20.2dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/yanzheng_icon" />

        <TextView
            android:id="@+id/btn_get_code"
            android:layout_width="80dp"
            android:layout_height="27dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_bg_can_click_3"
            android:gravity="center"
            android:text="获取验证码"
            android:textColor="@color/white_color"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/code_clear"
            android:layout_width="30.4dp"
            android:layout_height="30.4dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_toLeftOf="@id/btn_get_code"
            android:padding="5dp"
            android:src="@drawable/yijianshanchu"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="11.5dp"
            android:layout_marginRight="11.5dp"
            android:layout_toLeftOf="@+id/code_clear"
            android:layout_toRightOf="@+id/iv"
            android:background="@null"
            android:hint="请输入短信验证码"
            android:textColorHint="@color/text_gray"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="11.9dp"
        android:layout_marginRight="11.9dp"
        android:layout_marginTop="1dp"
        android:background="@color/white_color"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="14.9dp"
                android:layout_height="20.2dp"
                android:layout_gravity="center"
                android:src="@drawable/mima_icon" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="11.5dp"
                android:layout_marginRight="11.5dp"
                android:background="@null"
                android:hint="设置密码(6-20位数字和字母组合)"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColorHint="@color/text_gray"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/password_clear"
            android:layout_width="30.4dp"
            android:layout_height="30.4dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:padding="5dp"
            android:src="@drawable/yijianshanchu"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="11.9dp"
        android:layout_marginRight="11.9dp"
        android:layout_marginTop="1dp"
        android:background="@color/white_color"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:layout_width="14.9dp"
                android:layout_height="20.2dp"
                android:layout_gravity="center"
                android:src="@drawable/querenmima_icon" />

            <EditText
                android:id="@+id/et_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="11.5dp"
                android:layout_marginRight="11.5dp"
                android:background="@null"
                android:hint="确认密码(6-20位数字和字母组合)"
                android:inputType="textPassword"
                android:maxLength="20"
                android:textColorHint="@color/text_gray"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/password_confirm_clear"
            android:layout_width="30.4dp"
            android:layout_height="30.4dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:padding="5dp"
            android:src="@drawable/yijianshanchu"
            android:visibility="gone" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg_can_click_3"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/sure"
        android:textColor="@color/white_color" />


</LinearLayout>